--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,11 @@ website:
     - text: "Hands-on Exercise"
       menu:
         - text: "Hands-on Exercise 1"
-          href: "Hands-on_Ex/Hands-on_Ex01/hANDS-ON_eX01.html"
+          href: "Hands-on_Ex/Hands-on_Ex01/Hands-on_EX01.html"
+    - text: "In-class Exercise"
+      menu:
+        - text: "In-class Exercise 1"
+          href: "In-class_Ex/In-class_Ex01/In-class_EX01.html"
     right:
       - href: index.qmd
         text: Home
