--- a/_quarto.yml
+++ b/_quarto.yml
@@ -25,6 +25,8 @@ website:
           href: "In-class_Ex/In-class_Ex01/In-class_EX01.html"
         - text: "In-class Exercise 2"
           href: "In-class_Ex/In-class_Ex02/In-class_EX02.html"
+        - text: "In-class Exercise 3"
+          href: "In-class_Ex/In-class_Ex03/In-class_EX03.html"
     right:
       - href: index.qmd
         text: Home
