--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,6 +11,8 @@ website:
           href: "Notes/Lesson_1.html"
         - text: "Notes 2"
           href: "Notes/Lesson_2.html"
+        - text: "Notes 3"
+          href: "Notes/Lesson_3.html"
     - text: "Hands-on Exercise"
       menu:
         - text: "Hands-on Exercise 1"
@@ -27,6 +29,10 @@ website:
           href: "In-class_Ex/In-class_Ex02/In-class_EX02.html"
         - text: "In-class Exercise 3"
           href: "In-class_Ex/In-class_Ex03/In-class_EX03.html"
+    - text: "Take-home Exercise"
+      menu:
+        - text: "Take-home Exercise 1"
+          href: "Take-home_Ex/Take-home_Ex01/Take-home_EX01.html"
     right:
       - href: index.qmd
         text: Home
