--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,6 +21,8 @@ website:
           href: "Hands-on_Ex/Hands-on_Ex02/Hands-on_EX02.html"
         - text: "Hands-on Exercise 3"
           href: "Hands-on_Ex/Hands-on_Ex03/Hands-on_EX03.html"
+        - text: "Hands-on Exercise 4"
+          href: "Hands-on_Ex/Hands-on_Ex04/Hands-on_EX04.html"
     - text: "In-class Exercise"
       menu:
         - text: "In-class Exercise 1"
