--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,8 @@ website:
           href: "Notes/Lesson_3.html"
         - text: "Notes 5"
           href: "Notes/Lesson_5.html"
+        - text: "Notes 6"
+          href: "Notes/Lesson_6.html"
     - text: "Hands-on Exercise"
       menu:
         - text: "Hands-on Exercise 1"
@@ -27,6 +29,8 @@ website:
           href: "Hands-on_Ex/Hands-on_Ex04/Hands-on_EX04.html"
         - text: "Hands-on Exercise 5"
           href: "Hands-on_Ex/Hands-on_Ex05/Hands-on_EX05.html"
+        - text: "Hands-on Exercise 6"
+          href: "Hands-on_Ex/Hands-on_Ex06/Hands-on_EX06.html"
     - text: "In-class Exercise"
       menu:
         - text: "In-class Exercise 1"
