--- a/_quarto.yml
+++ b/_quarto.yml
@@ -43,6 +43,8 @@ website:
           href: "In-class_Ex/In-class_Ex04/In-class_EX04.html"
         - text: "In-class Exercise 5"
           href: "In-class_Ex/In-class_Ex05/In-class_EX05.html"
+        - text: "In-class Exercise 6"
+          href: "In-class_Ex/In-class_Ex06/In-class_EX06.html"
     - text: "Take-home Exercise"
       menu:
         - text: "Take-home Exercise 1"
