--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,6 +17,8 @@ website:
           href: "Notes/Lesson_5.html"
         - text: "Notes 6"
           href: "Notes/Lesson_6.html"
+        - text: "Notes 8"
+          href: "Notes/Lesson_8.html"
     - text: "Hands-on Exercise"
       menu:
         - text: "Hands-on Exercise 1"
@@ -33,6 +35,8 @@ website:
           href: "Hands-on_Ex/Hands-on_Ex06/Hands-on_EX06.html"
         - text: "Hands-on Exercise 7"
           href: "Hands-on_Ex/Hands-on_Ex07/Hands-on_EX07.html"
+        - text: "Hands-on Exercise 8"
+          href: "Hands-on_Ex/Hands-on_Ex08/Hands-on_EX08.html"
     - text: "In-class Exercise"
       menu:
         - text: "In-class Exercise 1"
