--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,6 +19,8 @@ website:
           href: "Notes/Lesson_6.html"
         - text: "Notes 8"
           href: "Notes/Lesson_8.html"
+        - text: "Notes 10"
+          href: "Notes/Lesson_10.html"
     - text: "Hands-on Exercise"
       menu:
         - text: "Hands-on Exercise 1"
@@ -55,6 +57,8 @@ website:
           href: "In-class_Ex/In-class_Ex06/In-class_EX06.html"
         - text: "In-class Exercise 9"
           href: "In-class_Ex/In-class_Ex09/In-class_EX09.html"
+        - text: "In-class Exercise 10"
+          href: "In-class_Ex/In-class_Ex10/In-class_EX10.html"
     - text: "Take-home Exercise"
       menu:
         - text: "Take-home Exercise 1"
