--- a/_quarto.yml
+++ b/_quarto.yml
@@ -41,6 +41,8 @@ website:
           href: "Hands-on_Ex/Hands-on_Ex08/Hands-on_EX08.html"
         - text: "Hands-on Exercise 9"
           href: "Hands-on_Ex/Hands-on_Ex09/Hands-on_EX09.html"
+        - text: "Hands-on Exercise 11"
+          href: "Hands-on_Ex/Hands-on_Ex11/Hands-on_EX11.html"
     - text: "In-class Exercise"
       menu:
         - text: "In-class Exercise 1"
