--- a/_quarto.yml
+++ b/_quarto.yml
@@ -43,6 +43,8 @@ website:
           href: "Hands-on_Ex/Hands-on_Ex09/Hands-on_EX09.html"
         - text: "Hands-on Exercise 11"
           href: "Hands-on_Ex/Hands-on_Ex11/Hands-on_EX11.html"
+        - text: "Hands-on Exercise 12"
+          href: "Hands-on_Ex/Hands-on_Ex12/Hands-on_EX12.html"
     - text: "In-class Exercise"
       menu:
         - text: "In-class Exercise 1"
