--- a/_quarto.yml
+++ b/_quarto.yml
@@ -65,6 +65,8 @@ website:
           href: "In-class_Ex/In-class_Ex10/In-class_EX10.html"
         - text: "In-class Exercise 11"
           href: "In-class_Ex/In-class_Ex11/In-class_EX11.html"
+        - text: "In-class Exercise 12"
+          href: "In-class_Ex/In-class_Ex12/In-class_EX12.html"
     - text: "Take-home Exercise"
       menu:
         - text: "Take-home Exercise 1"
